# evifluor

./: LICENSE  README.md
c/: CMakeLists.txt  README.md
c/src/: channel.c  channel.h  cmdbaseline.c  cmdbaseline.h  cmdcommand.c  cmdcommand.h  cmddata.c  cmddata.h  cmdempty.c  cmdempty.h  cmdexport.c  cmdexport.h  cmdfwupdate.c  cmdfwupdate.h  cmdget.c  cmdget.h  cmdmeasure.c  cmdmeasure.h  cmdrun.c  cmdrun.h  cmdsave.c  cmdsave.h  cmdselftest.c  cmdselftest.h  cmdset.c  cmdset.h  commonerror.h  commonindex.h  crc-16-ccitt.c  crc-16-ccitt.h  dict.h  evi_unix.c  evi_win.c  evibase.c  evibase.h  eviconfig.h  evifluor.c  evifluor.h  evifluorerror.h  evifluorindex.h  (+13 more)
csharp/: .gitignore  README.md  eviFluor.sln
csharp/EviFluor/: EviFluor.csproj  README.md  channel.cs  constants.cs  device.cs  devicefinder.cs  ijsonserializable.cs  ikit.cs  kits.cs  measurement.cs  run.cs  singlemeasurement.cs  storage.cs  verification.cs
csharp/EviFluorDemo/: EviFluorDemo.csproj  Program.cs  Readme.md
csharp/doc/: index.html  index.json  manifest.json  toc.html  toc.json  xrefmap.yml
csharp/doc/api/: Hse.EviFluor.AutoGainResult.html  Hse.EviFluor.Channel.html  Hse.EviFluor.Device.Rebooting.html  Hse.EviFluor.Device.UpdateProgress.html  Hse.EviFluor.Device.html  Hse.EviFluor.DeviceFinder.html  Hse.EviFluor.Dict.html  Hse.EviFluor.Error.html  Hse.EviFluor.Factors.html  Hse.EviFluor.FirstAirMeasurementResult.html  Hse.EviFluor.FirstSampleMeasurementResult.html  Hse.EviFluor.IJsonSerializable.html  Hse.EviFluor.IKit.html  Hse.EviFluor.Index.html  Hse.EviFluor.Kits.Default.html  Hse.EviFluor.Kits.Quant_iT_dsDNA_HS.html  Hse.EviFluor.Kits.html  Hse.EviFluor.Measurement.html  Hse.EviFluor.Point.html  Hse.EviFluor.Results.html  Hse.EviFluor.Run.html  Hse.EviFluor.SelfTestResult.html  Hse.EviFluor.Selftest.html  Hse.EviFluor.SingleMeasurement.html  Hse.EviFluor.StatusLedColor.html  Hse.EviFluor.StorageMeasurement.html  Hse.EviFluor.StorageMeasurementEntry.html  Hse.EviFluor.TypeOf.html  Hse.EviFluor.USB.html  Hse.EviFluor.Verification.Entry.html  Hse.EviFluor.Verification.Hints.html  Hse.EviFluor.Verification.ProblemId.html  Hse.EviFluor.Verification.html  Hse.EviFluor.html  toc.html  toc.json
csharp/doc/docs/: introduction.html
